# fmi3-wasm

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
examples/adder-c-fmu/: adder-c-fmu.c  modelDescription.xml
examples/adder-fmu/: Cargo.toml  modelDescription.xml
examples/adder-fmu-c-runner/: main.c
examples/adder-fmu-runner/: Cargo.toml
examples/adder-fmu-runner/src/: main.rs
examples/adder-fmu-rust-runner/: Cargo.toml
examples/adder-fmu-rust-runner/src/: main.rs
examples/adder-fmu/src/: lib.rs
examples/adder-rust-fmu/: Cargo.toml  modelDescription.xml
examples/adder-rust-fmu/src/: lib.rs
examples/adder-wat-fmu/: adder-wat-fmu.wat  modelDescription.xml
wit/: fmi3-co-simulation.wit  fmi3-common.wit  fmi3-model-exchange.wit  fmi3-scheduled-execution.wit
