[package]
name    = "adder-fmu-rust-runner"
version = "0.1.0"
edition = "2021"
description = "Host runner that exercises the adder-rust-fmu Wasm component via wasmtime"

[[bin]]
name = "adder-fmu-rust-runner"
path = "src/main.rs"

[dependencies]
# Component-model host runtime.
wasmtime      = { version = "45", features = ["component-model"] }
wasmtime-wasi = "45"
anyhow        = "1"
# FMU archive unpacking
zip      = "2"
tempfile = "3"
